Upstreeaaaaaammmmmmmmgit add .git add .!

--- a/nui/menu.html
+++ b/nui/menu.html
@@ -6,11 +6,9 @@
     </head>
     <body>
         <div id="menucontainer" style="display: none;">
-            <!-- Title -->
             <p id="title" class="menuoption menutitle">Universal Menu</p>
-			<!-- Main menu -->
 			<div id="mainmenu">
-				<p class="menuoption">Nothing in here it seems</p>
+				<p class="menuoption">Nothing in here it seems 🤔</p>
 				<p class="menuoption">Add modules for content</p>
 			</div>
         </div>
