--- a/nui/menu.html
+++ b/nui/menu.html
@@ -3,6 +3,7 @@
         <link href="menu.css" rel="stylesheet" type="text/css" />
         <script src="nui://game/ui/jquery.js" type="text/javascript"></script>
         <script src="menu.js" type="text/javascript"></script>
+		<script src="config.js" type="text/javascript"></script>
     </head>
     <body>
         <div id="menucontainer" style="display: none;">
