Subtitles and customizable font colors

--- a/nui/menu.html
+++ b/nui/menu.html
@@ -8,6 +8,7 @@
     <body>
         <div id="menucontainer" style="display: none;">
             <p id="title" class="menuoption menutitle">Universal Menu</p>
+			<p id="subtitle" class="menuoption menusubtitle">Main Menu</p>
 			<div id="mainmenu">
 				<p class="menuoption">Nothing in here it seems 🤔</p>
 				<p class="menuoption">Add modules for content</p>
