Descriptions and stabilizing

--- a/nui/menu.html
+++ b/nui/menu.html
@@ -9,10 +9,8 @@
         <div id="menucontainer" style="display: none;">
             <p id="title" class="menuoption menutitle">Universal Menu</p>
 			<p id="subtitle" class="menuoption menusubtitle">Main Menu</p>
-			<div id="mainmenu">
-				<p class="menuoption">Nothing in here it seems 🤔</p>
-				<p class="menuoption">Add modules for content</p>
-			</div>
+			<div id="mainmenu"></div>
+			<p id="desc" class="menuoption itemdesc"></p>
         </div>
     </body>
 </html>
